<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    tools:context=".FAQs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card1"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="How often should I exercise?"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/offWhite"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_1"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card2"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="It's too easy for me"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_2"
                        android:textColor="@color/offWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_2"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card3"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="It's too hard for me"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_3"
                        android:textColor="@color/offWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_3"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card4"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginEnd="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Can't see the results?"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/offWhite"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_4"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card5"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginEnd="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Should I warmup &amp; cool down?"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/offWhite"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_5"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card6"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#3C3C3C"
                android:layout_marginHorizontal="20dp"
                android:background="#D1CCDD"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/layout_expand6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="What if I miss a workout day?"
                        android:textSize="24sp"
                        android:textColor="#0FBFB1"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/details_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/offWhite"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="@string/expand_6"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>